syntax = "proto3";

package transformation;

message Transformations {
    map<string, Transformation> transformations = 1;
}

// [#proto-status: experimental]
message Transformation {
    // Extractors are in the origin request language domain
    map<string, Extraction> extractors = 1;
    // Template is in the transformed request language domain
    // currently both are JSON
    RequestTemplate request_template = 2;
}

message Extraction {
    string header = 1;
    // what information to extract. if extraction fails the result is 
    // an empty value.
    string regex =  2;
    uint32 subgroup = 3;

}

message RequestTemplate {
    map<string, InjaTemplate> headers = 1;
    InjaTemplate body = 2;
}
/*
custom functions:
header_value(name) -> from the original headers
extracted_value(name, index) -> from the extracted values
*/
message InjaTemplate {
    string text = 1;
}